--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,20 @@ services:
       - "8888:8888"
     depends_on:
       - redis
+    environment:
+      REDIS_STORAGE_IGNORE_ERRORS: True
+      REDIS_STORAGE_SERVER_PORT: 6379
+      REDIS_STORAGE_SERVER_HOST: "redis"
+      REDIS_STORAGE_SERVER_DB: 0
+      REDIS_STORAGE_SERVER_PASSWORD: None
+      REDIS_STORAGE_MODE: "single_node"
+      REDIS_RESULT_STORAGE_IGNORE_ERRORS: True
+      RESULT_STORAGE: "tc_redis.result_storages.redis_result_storage"
+      REDIS_RESULT_STORAGE_SERVER_PORT: 6379
+      REDIS_RESULT_STORAGE_SERVER_HOST: "redis"
+      REDIS_RESULT_STORAGE_SERVER_DB: 0
+      REDIS_RESULT_STORAGE_SERVER_PASSWORD: None
+      REDIS_RESULT_STORAGE_MODE: "single_node"
     volumes:
       - "./thumbor.conf:/app/thumbor.conf"
   redis:
