--- a/thumbor.conf
+++ b/thumbor.conf
@@ -1,6 +1,7 @@
 COMMUNITY_EXTENSIONS = [
     "tc_redis.result_storages.redis_result_storage"
 ]
+STORAGE = "tc_redis.storages.redis_storage"
 REDIS_STORAGE_IGNORE_ERRORS = True
 REDIS_STORAGE_SERVER_PORT = 6379
 REDIS_STORAGE_SERVER_HOST = "redis"
