--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,3 +64,5 @@ services:
     ports:
       - "6379:6379"
     command: redis-server --save 20 1 --loglevel warning
+    volumes:
+      - ./data/redis:/data
